--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@
 }
 #food-input{
     height: 100%;
-    width: 20%;
+    width: 30%;
+    padding-left:4px;
     border: 1px solid rgb(238, 230, 230); 
     border-radius: 5%; 
 
